--- a/WSR Project/WSR Project/Properties/Resources.resx
+++ b/WSR Project/WSR Project/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="tile_Volounters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_Volounters.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons_Crowdfouning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons_Crowdfouning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,14 +133,17 @@
   <data name="6_number_3075" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6_number_3075.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="aExit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\aExit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="football-field" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\football-field.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons_Admin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons_Admin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="refresh_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\refresh_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BMIwoman" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BMIwoman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sloth" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sloth.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Delete-80_icon-icons.com_57340" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Delete-80_icon-icons.com_57340.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,14 +160,11 @@
   <data name="tile_Blago" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tile_Blago.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="BMIwoman" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BMIwoman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="jaguar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jaguar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="map-icon-drinks1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-icon-drinks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="tile_Inventory" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tile_Inventory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="FormLoading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FormLoading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,8 +172,11 @@
   <data name="map-icon-toilets" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-icon-toilets.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiManDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="map-icon-medical" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\map-icon-medical.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="airbus-a380" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\airbus-a380.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bmiWomanSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiWomanSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -178,20 +184,23 @@
   <data name="charityDefaultLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\charityDefaultLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TeatroMunicipal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TeatroMunicipal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pair-of-havaianas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pair-of-havaianas.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MarathonImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MarathonImage.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Delete-80_icon-icons1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Delete-80_icon-icons.com_573401.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="карточка сбербунка" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\карточка сбербунка.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tile_Inventory" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_Inventory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons_Run" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons_Run.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bmiManDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiWomanLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiWomanLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bmiCalc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiCalc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiManLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons_About" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons_About.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,8 +211,14 @@
   <data name="icons_Results" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons_Results.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiManSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MarathonImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MarathonImage.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tile_users" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_users.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiManGood" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManGood.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="5_number_3827" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5_number_3827.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,26 +226,32 @@
   <data name="map-icon-start" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-icon-start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiCalc" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiCalc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="f1-car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\f1-car.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tile_users" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tile_users.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="aExit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\aExit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons_Pen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons_Pen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bmiWomanLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiWomanLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tile_Volounters" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tile_Volounters.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ronaldinho" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ronaldinho.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiManSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bmiManBad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiManBad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiManLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons_Pen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons_Pen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiManGood" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManGood.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="карточка сбербунка" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\карточка сбербунка.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="refresh_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refresh_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons_back" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons_back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -241,8 +262,11 @@
   <data name="3number_3_3077" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3number_3_3077.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="map-icon-medical" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\map-icon-medical.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="horse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\horse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="worm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\worm.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bmiWomanDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiWomanDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -250,16 +274,28 @@
   <data name="map-icon-information" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-icon-information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bus.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="capybara" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\capybara.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BMIman" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BMIman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TeatroMunicipal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TeatroMunicipal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bmiWomanBad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiWomanBad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons_Run" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons_Run.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="1number_1_3831" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1number_1_3831.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Delete-80_icon-icons1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Delete-80_icon-icons.com_573401.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="f1-car1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\f1-car1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
